--- a/index.html
+++ b/index.html
@@ -181,11 +181,10 @@
     <span style="left: 65%; animation-delay: 6.5s;"></span>
     <span style="left: 75%; animation-delay: 7.5s;"></span>
     <span style="left: 85%; animation-delay: 8.5s;"></span>
-  </div>
   <div class="background-music">
-    <audio autoplay loop>
-      <source src="https://www.bensound.com/bensound-music/bensound-love.mp3" type="audio/mpeg">
-    </audio>
-  </div>
+  <audio autoplay loop>
+    <source src="https://pixabay.com/music/sweet-dreams-piano-eritnhut1992.mp3" type="audio/mpeg">
+  </audio>
+</div>
 </body>
 </html>
